--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="time; URL=./HTML-Personal Site" />
+<meta http-equiv="refresh" content="0; URL=./HTML-Personal Site" />
